--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             <td>seis</td>
         </tr>
     </table>
+    <p>Parrafo 1</p>
+    <p>Parrafo 2</p>
+    <p>Parrafo 3</p>
+    <p>Parrafo 4</p>
+    <p>Parrafo 5</p>
+    <form action="">
+        <label for="">Dame tu opinion</label>
+        <textarea name="" id=""></textarea>
+    </form>
 
 </body>
 </html>
