--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     <td>4</td>
     <td>5</td>
 </tr></table>
+<table><tr>
+    <td>1</td>
+    <td>2</td>
+    <td>3</td>
+    <td>4</td>
+    <td>5</td>
+</tr></table>
 
 </body>
 </html>
